--- a/index.html
+++ b/index.html
@@ -1,8 +1,53 @@
 <!DOCTYPE html>
+<link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" type="text/css">
+
+
+
+
+<style>
+
+.backg{
+      background-color: silver;
+}
+
+h1 {
+  font-family: Open Sans, sans-serif;
+  font-size: 40px;
+  color: blue;
+}
+
+
+
+.bluetext{
+  font-size: 20px;
+  color: blue;
+  font-family: monospace;
+}
+
+
+
+
+</style>
 <html>
+<div class="backg">
 <title>Jim Ryan
 </title>
 
 <h1>Jim Ryan</h1>
+<h2>My Portfolio website</h2>
+<h3>  <a href="https://github.com/JimHunterRyan">My Github </a></h3>
 
+<p>I will definitely finish making this website and have it as a portfolio at some point, but for now I am just using it to practice some web design.</P>
+<p>Things I am learning at the moment.
+
+
+</p>
+<ul class="bluetext"><li>Java</li>
+  <li>HTML</li>
+  <li>CSS</li>
+
+
+</ul>
+
+</div>
 </html>
