--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
 
 
 <style>
+body {
+  background-color: grey;
+  color:green;
+}
+
+
+
 
 .backg{
       background-color: silver;
@@ -34,8 +41,8 @@ h1 {
 </title>
 
 <h1>Jim Ryan</h1>
-<h2>My Portfolio website</h2>
-<h3>  <a href="https://github.com/JimHunterRyan">My Github </a></h3>
+<h2>  My Portfolio website</h2>
+<h3>  <a href="https://github.com/JimHunterRyan" target=_blank>My Github </a></h3>
 
 <p>I will definitely finish making this website and have it as a portfolio at some point, but for now I am just using it to practice some web design.</P>
 <p>Things I am learning at the moment.
