--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@ h1 {
 </title>
 
 <h1>Jim Ryan</h1>
+<img src=dogs.jpg>
 <h2>  My Portfolio website</h2>
 <h3>  <a href="https://github.com/JimHunterRyan" target=_blank>My Github </a></h3>
 
