--- a/index.html
+++ b/index.html
@@ -6,56 +6,50 @@
 
 <style>
 body {
-  background-color: grey;
+  background-color: black;
   color:green;
-}
-
-
-
-
-.backg{
-      background-color: silver;
+  font-family: monospace;
+  border-color: green;
+  border-style: solid;
+  border-width: 5px;
+  border-top: -30px;
 }
 
 h1 {
-  font-family: Open Sans, sans-serif;
+  font-family: monospace;
   font-size: 40px;
-  color: blue;
+  color: green;
 }
 
-
-
-.bluetext{
+.greentext{
   font-size: 20px;
-  color: blue;
+  color: green;
   font-family: monospace;
 }
 
-
-
-
 </style>
+
 <html>
+
 <div class="backg">
-<title>Jim Ryan
-</title>
+
+<title>Jim Ryan </title>
 
 <h1>Jim Ryan</h1>
-<img src=dogs.jpg>
+
+<img src=dogs.png>
+
 <h2>  My Portfolio website</h2>
+
 <h3>  <a href="https://github.com/JimHunterRyan" target=_blank>My Github </a></h3>
 
 <p>I will definitely finish making this website and have it as a portfolio at some point, but for now I am just using it to practice some web design.</P>
-<p>Things I am learning at the moment.
-
-
-</p>
-<ul class="bluetext"><li>Java</li>
-  <li>HTML</li>
-  <li>CSS</li>
-
-
+<p>Things I am learning at the moment.</p>
+<ul class="bluetext"> <li>Java</li>
+                      <li>HTML</li>
+                      <li>CSS</li>
 </ul>
 
 </div>
+
 </html>
