--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" type="text/css">
+<link href="https://fonts.googleapis.com/css?family=Mansalva&display=swap" rel="stylesheet">
+
 
 
 
 
 <style>
+
+
+
 body {
   background-color: black;
   color:green;
@@ -16,16 +20,30 @@ body {
 }
 
 h1 {
-  font-family: monospace;
+  font-family: 'Mansalva', cursive;
   font-size: 40px;
   color: green;
+  text-align: center;
 }
 
 .greentext{
   font-size: 20px;
   color: green;
   font-family: monospace;
+
+
 }
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
+
+
+
 
 </style>
 
@@ -37,7 +55,7 @@ h1 {
 
 <h1>Jim Ryan</h1>
 
-<img src=dogs.png>
+<img src=dogs.png alt="My Dogs"  class="center">
 
 <h2>  My Portfolio website</h2>
 
