--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
 
 
 <style>
+    .fullCard {
+    
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin: 10px 5px;
+    padding: 4px;
+    width: 245px;
+  }
 
 
 
@@ -55,15 +63,15 @@ h1 {
 
 <h1>Jim Ryan</h1>
 
-<img src=dogs.png alt="My Dogs"  class="center">
+<!--<img src=dogs.png alt="My Dogs"  class="center">-->
 
 <h2>  My Portfolio website</h2>
 
 <h3>  <a href="https://github.com/JimHunterRyan" target=_blank>My Github </a></h3>
 
-<p>I will definitely finish making this website and have it as a portfolio at some point, but for now I am just using it to practice some web design.</P>
+<p class="fullCard">I will definitely finish making this website and have it as a portfolio at some point, but for now I am just using it to practice some web design.</P>
 <p>Things I am learning at the moment.</p>
-<ul class="bluetext"> <li>Java</li>
+<ul class="fullCard"> <li>Java</li>
                       <li>HTML</li>
                       <li>CSS</li>
 </ul>
