--- a/index.html
+++ b/index.html
@@ -1,36 +1,52 @@
 <!DOCTYPE html>
 <link href="https://fonts.googleapis.com/css?family=Mansalva&display=swap" rel="stylesheet">
-
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<a href="https://www.linkedin.com/in/jim-ryan-255675185/" class="fa fa-linkedin" target="_blank"></a>
+<a href="https://twitter.com/JR98_IRL" class="fa fa-twitter" target="_blank"></a>
 
 
 
 <style>
-    .fullCard {
-    
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    margin: 10px 5px;
-    padding: 4px;
-    width: 245px;
-  }
+ .fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 30px;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 50%;
+}
+/* Add a hover effect if you want */
+.fa:hover {
+  opacity: 0.7;
+}
+
+
+
+/* Facebook */
+.fa-linkedin {
+  background: #F2A541;
+  color: white;
+}
+
+/* Twitter */
+.fa-twitter {
+  background: #F2A541;
+  color: white;
+}
 
 
 
 body {
-  background-color: black;
-  color:green;
+  background-color: #577590;
+  color:#F08A4B;
   font-family: monospace;
-  border-color: green;
-  border-style: solid;
-  border-width: 5px;
-  border-top: -30px;
+  
 }
 
 h1 {
   font-family: 'Mansalva', cursive;
   font-size: 40px;
-  color: green;
+  color: #F2A541;
   text-align: center;
 }
 
@@ -65,15 +81,15 @@ h1 {
 
 <!--<img src=dogs.png alt="My Dogs"  class="center">-->
 
-<h2>  My Portfolio website</h2>
+<h2>Portfolio</h2>
 
 <h3>  <a href="https://github.com/JimHunterRyan" target=_blank>My Github </a></h3>
 
-<p class="fullCard">I will definitely finish making this website and have it as a portfolio at some point, but for now I am just using it to practice some web design.</P>
-<p>Things I am learning at the moment.</p>
-<ul class="fullCard"> <li>Java</li>
+<p><em>I will definitely finish making this website and have it as a portfolio at some point, but for now I am just using it to practice some web design.</em></P>
+<p><u>Things I am learning at the moment.</u></p>
+<ul> <li><strong>Java</li>
                       <li>HTML</li>
-                      <li>CSS</li>
+                      <li>CSS</strong></li>
 </ul>
 
 </div>
