--- a/index.html
+++ b/index.html
@@ -1,97 +1,22 @@
 <!DOCTYPE html>
-<link href="https://fonts.googleapis.com/css?family=Mansalva&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<a href="https://www.linkedin.com/in/jim-ryan-255675185/" class="fa fa-linkedin" target="_blank"></a>
-<a href="https://twitter.com/JR98_IRL" class="fa fa-twitter" target="_blank"></a>
-
-
-
-<style>
- .fa {
-  padding: 20px;
-  font-size: 30px;
-  width: 30px;
-  text-align: center;
-  text-decoration: none;
-  border-radius: 50%;
-}
-/* Add a hover effect if you want */
-.fa:hover {
-  opacity: 0.7;
-}
-
-
-
-/* Facebook */
-.fa-linkedin {
-  background: #F2A541;
-  color: white;
-}
-
-/* Twitter */
-.fa-twitter {
-  background: #F2A541;
-  color: white;
-}
-
-
-
-body {
-  background-color: #577590;
-  color:#F08A4B;
-  font-family: monospace;
-  
-}
-
-h1 {
-  font-family: 'Mansalva', cursive;
-  font-size: 40px;
-  color: #F2A541;
-  text-align: center;
-}
-
-.greentext{
-  font-size: 20px;
-  color: green;
-  font-family: monospace;
-
-
-}
-
-.center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-}
-
-
-
-
-
-</style>
 
 <html>
-
-<div class="backg">
-
-<title>Jim Ryan </title>
-
-<h1>Jim Ryan</h1>
-
-<!--<img src=dogs.png alt="My Dogs"  class="center">-->
-
-<h2>Portfolio</h2>
-
-<h3>  <a href="https://github.com/JimHunterRyan" target=_blank>My Github </a></h3>
-
-<p><em>I will definitely finish making this website and have it as a portfolio at some point, but for now I am just using it to practice some web design.</em></P>
-<p><u>Things I am learning at the moment.</u></p>
-<ul> <li><strong>Java</li>
-                      <li>HTML</li>
-                      <li>CSS</strong></li>
-</ul>
-
-</div>
-
+  <head>
+    <link rel="stylesheet" href="style.css">
+    <title>Jim Ryan </title>
+  </head>
+  <body>
+    <div id="stickyHeading">
+      <h1>Jim Ryan</h1>
+    </div>
+    <h2>Portfolio</h2>
+    <h3><a href="https://github.com/JimHunterRyan" target=_blank>My Github</a></h3>
+    <p><em>I will definitely finish making this website and have it as a portfolio at some point, but for now I am just using it to practice some web design.</em></P>
+    <p><u>Things I am learning at the moment.</u></p>
+    <strong><ul><li>Java</li>
+                <li>HTML</li>
+                <li>CSS</li>
+            </ul></strong>
+    </div>
+</body>
 </html>
