--- a/index.html
+++ b/index.html
@@ -3,20 +3,56 @@
 <html>
   <head>
     <link rel="stylesheet" href="style.css">
-    <title>Jim Ryan </title>
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display+SC&display=swap" rel="stylesheet">
+
+    <title>Jim Ryan Portfolio</title>
   </head>
   <body>
-    <div id="stickyHeading">
-      <h1>Jim Ryan</h1>
-    </div>
-    <h2>Portfolio</h2>
-    <h3><a href="https://github.com/JimHunterRyan" target=_blank>My Github</a></h3>
-    <p><em>I will definitely finish making this website and have it as a portfolio at some point, but for now I am just using it to practice some web design.</em></P>
-    <p><u>Things I am learning at the moment.</u></p>
-    <strong><ul><li>Java</li>
-                <li>HTML</li>
-                <li>CSS</li>
-            </ul></strong>
-    </div>
-</body>
+    <header>
+      <h1>My portfolio</h1>
+    </header>
+    <section id="welcome-section">
+      <h1>Hello, my name is Jim Ryan and I am a web developer</h1>
+      <div>
+        <a href="https://github.com/JimHunterRyan" id="profile-link"><img src="images\github.png" id="github"></a>
+      </div>
+    </section>
+    <section id="projects">
+      <div class="projectTile" id="docs">
+        <a href="http://ryanjim.me/draiocht-documentation/">
+          <img src="images\doc.png">
+          <p>Documentaion page</p>
+        </a>
+      </div>
+      <div class="projectTile" id="lclc">
+         <a href="https://tomc17.github.io/Misbits-Non-Profit-Website/">
+          <img src="images\lclc.png">
+          <p>Limerick Coding Learning Centre</p>
+        </a>
+      </div>
+      <div class="projectTile" id="survey">
+        <a href="http://ryanjim.me/Rugby-Survey-HTML/">
+          <img src="images\survey.png">
+          <p>Rugby survey</p>
+        </a>
+      </div>
+      <div class="projectTile" id="firewood">
+        <a href="http://ryanjim.me/firewood/">
+          <img src="images\firewood.png">
+          <p>Firewood</p>
+        </a>
+      </div>
+      <div class="projectTile" id="tribute">
+        <a href="http://ryanjim.me/JoeRyanTribute/">
+          <img src="images\tribute.png">
+          <p>Joe Ryan tribute</p>
+        </a>
+      </div>
+    </section>
+    <nav id="navbar">
+      <u>
+        <l><a class="textboxlink" href="#docs">Documentation</a><l class="footerFont">|</l><a class="textboxlink" href="#lclc">Limerick Coding Learning Centre</a><l class="footerFont">|</l><a class="textboxlink" href="#survey">Rugby survey</a><l class="footerFont">|</l><l><a class="textboxlink" href="#firewood">Firewood</a><l class="footerFont">|</l><a class="textboxlink" href="#tribute">Joe Ryan tribute</a>
+        </u>
+    </nav>
+  </body>
 </html>
