--- a/index.html
+++ b/index.html
@@ -26,25 +26,25 @@
       </div>
       <div class="projectTile" id="lclc">
          <a href="https://tomc17.github.io/Misbits-Non-Profit-Website/">
-          <img src="images\lclc.png">
+          <img src="images\lclc.PNG">
           <p>Limerick Coding Learning Centre</p>
         </a>
       </div>
       <div class="projectTile" id="survey">
         <a href="http://ryanjim.me/Rugby-Survey-HTML/">
-          <img src="images\survey.png">
+          <img src="images\survey.PNG">
           <p>Rugby survey</p>
         </a>
       </div>
       <div class="projectTile" id="firewood">
         <a href="http://ryanjim.me/firewood/">
-          <img src="images\firewood.png">
+          <img src="images\firewood.PNG">
           <p>Firewood</p>
         </a>
       </div>
       <div class="projectTile" id="tribute">
         <a href="http://ryanjim.me/JoeRyanTribute/">
-          <img src="images\tribute.png">
+          <img src="images\tribute.PNG">
           <p>Joe Ryan tribute</p>
         </a>
       </div>
