--- a/index.html
+++ b/index.html
@@ -1,58 +1,64 @@
 <!DOCTYPE html>
-
 <html>
-  <head>
+
+<head>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display+SC&display=swap" rel="stylesheet">
-
     <title>Jim Ryan Portfolio</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <header>
-      <h1>My portfolio</h1>
+        <h1>My portfolio</h1>
     </header>
     <section id="welcome-section">
-      <h1>Hello, my name is Jim Ryan and I am a web developer</h1>
-      <div>
-        <a href="https://github.com/JimHunterRyan" id="profile-link"><img src="images\github.png" id="github"></a>
-      </div>
+        <h1>Hello, my name is Jim Ryan and I am a web developer</h1>
+        <div>
+            <a href="https://github.com/JimHunterRyan" id="profile-link"><img src="images\github.png" id="github"></a>
+        </div>
     </section>
     <section id="projects">
-      <div class="projectTile" id="docs">
-        <a href="http://ryanjim.me/draiocht-documentation/">
-          <img src="images\doc.png">
-          <p>Documentaion page</p>
-        </a>
-      </div>
-      <div class="projectTile" id="lclc">
-         <a href="https://tomc17.github.io/Misbits-Non-Profit-Website/">
-          <img src="images\lclc.PNG">
-          <p>Limerick Coding Learning Centre</p>
-        </a>
-      </div>
-      <div class="projectTile" id="survey">
-        <a href="http://ryanjim.me/Rugby-Survey-HTML/">
-          <img src="images\survey.PNG">
-          <p>Rugby survey</p>
-        </a>
-      </div>
-      <div class="projectTile" id="firewood">
-        <a href="http://ryanjim.me/firewood/">
-          <img src="images\firewood.PNG">
-          <p>Firewood</p>
-        </a>
-      </div>
-      <div class="projectTile" id="tribute">
-        <a href="http://ryanjim.me/JoeRyanTribute/">
-          <img src="images\tribute.PNG">
-          <p>Joe Ryan tribute</p>
-        </a>
-      </div>
+        <div class="projectTile" id="docs">
+            <a href="http://ryanjim.me/draiocht-documentation/">
+                <img src="images\doc.png">
+                <p>Documentaion page</p>
+            </a>
+        </div>
+        <div class="projectTile" id="lclc">
+            <a href="https://tomc17.github.io/Misbits-Non-Profit-Website/">
+                <img src="images\lclc.PNG">
+                <p>Limerick Coding Learning Centre</p>
+            </a>
+        </div>
+        <div class="projectTile" id="survey">
+            <a href="http://ryanjim.me/Rugby-Survey-HTML/">
+                <img src="images\survey.PNG">
+                <p>Rugby survey</p>
+            </a>
+        </div>
+        <div class="projectTile" id="firewood">
+            <a href="http://ryanjim.me/firewood/">
+                <img src="images\firewood.PNG">
+                <p>Firewood</p>
+            </a>
+        </div>
+        <div class="projectTile" id="tribute">
+            <a href="http://ryanjim.me/JoeRyanTribute/">
+                <img src="images\tribute.PNG">
+                <p>Joe Ryan tribute</p>
+            </a>
+        </div>
     </section>
     <nav id="navbar">
-      <u>
-        <l><a class="textboxlink" href="#docs">Documentation</a><l class="footerFont">|</l><a class="textboxlink" href="#lclc">Limerick Coding Learning Centre</a><l class="footerFont">|</l><a class="textboxlink" href="#survey">Rugby survey</a><l class="footerFont">|</l><l><a class="textboxlink" href="#firewood">Firewood</a><l class="footerFont">|</l><a class="textboxlink" href="#tribute">Joe Ryan tribute</a>
+        <u>
+            <l><a class="textboxlink" href="#docs">Documentation</a>
+                <l class="footerFont">|</l><a class="textboxlink" href="#lclc">Limerick Coding Learning Centre</a>
+                <l class="footerFont">|</l><a class="textboxlink" href="#survey">Rugby survey</a>
+                <l class="footerFont">|</l>
+                <l><a class="textboxlink" href="#firewood">Firewood</a>
+                    <l class="footerFont">|</l><a class="textboxlink" href="#tribute">Joe Ryan tribute</a>
         </u>
     </nav>
-  </body>
+</body>
+
 </html>
