--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/JR.png" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
