--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       name="viewport"
       content="minimum-scale=1, initial-scale=1, width=device-width"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/JR.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Jim Ryan | Portfolio</title>
   </head>
